tests/indexed_access/indexed_access.exp
Error ---------------------------------------------------------------------------------------------------- import.js:4:1

Cannot cast `1` to `ObjFoo` because number [1] is incompatible with boolean [2]. [incompatible-type]

   import.js:4:1
   4| 1 as ObjFoo; // Error
      ^ [1]

References:
   import.js:4:6
   4| 1 as ObjFoo; // Error
           ^^^^^^ [2]


Error --------------------------------------------------------------------------------------------------- import.js:10:1

Cannot cast `1` to `B` because: [incompatible-type]
 - Either number [1] is incompatible with boolean [2].
 - Or number [1] is incompatible with undefined [3].

   import.js:10:1
   10| 1 as B; // Error
       ^ [1]

References:
   optional_export.js:2:6
    2|   b: boolean,
            ^^^^^^^ [2]
   optional_export.js:11:17
   11| export type B = Opt?.['b'];
                       ^^^ [3]


Error --------------------------------------------------------------------------------------------------- import.js:14:1

Cannot cast `true` to `N` because: [incompatible-type]
 - Either boolean [1] is incompatible with number [2].
 - Or boolean [1] is incompatible with undefined [3].

   import.js:14:1
   14| true as N; // Error
       ^^^^ [1]

References:
   optional_export.js:4:9
    4|     nn: number,
               ^^^^^^ [2]
   optional_export.js:12:17
   12| export type N = Opt?.['n']['nn'];
                       ^^^^^^^^^^ [3]


Error --------------------------------------------------------------------------------------------------- import.js:18:1

Cannot cast `true` to `S` because: [incompatible-type]
 - Either boolean [1] is incompatible with string [2].
 - Or boolean [1] is incompatible with undefined [3].

   import.js:18:1
   18| true as S; // Error
       ^^^^ [1]

References:
   optional_export.js:7:9
    7|     ss: string,
               ^^^^^^ [2]
   optional_export.js:13:17
   13| export type S = Opt?.['s']?.['ss'];
                       ^^^^^^^^^^ [3]


Error ------------------------------------------------------------------------------------------------- optional.js:8:19

Cannot access string literal `xxx` on indexed access because property `xxx` is missing in object type [1].
[prop-missing]

   optional.js:8:19
   8| 1 as Obj['foo']?.['xxx']; // Error - wrong prop
                        ^^^^^

References:
   optional.js:2:9
              v-
   2|   foo?: {|
   3|     bar: number,
   4|   |},
        -^ [1]


Error ------------------------------------------------------------------------------------------------ optional.js:10:21

Cannot access string literal `bar` on indexed access because property `bar` is missing in undefined [1].
[incompatible-use]

   optional.js:10:21
   10| type X = Obj['foo']['bar']; // Error - access `bar` on undefined
                           ^^^^^

References:
   optional.js:10:10
   10| type X = Obj['foo']['bar']; // Error - access `bar` on undefined
                ^^^^^^^^^^ [1]


Error ------------------------------------------------------------------------------------------------- optional.js:15:1

Cannot cast `true` to `T` because: [incompatible-type]
 - Either boolean [1] is incompatible with number [2].
 - Or boolean [1] is incompatible with undefined [3].

   optional.js:15:1
   15| true as T; // Error - wrong type
       ^^^^ [1]

References:
   optional.js:3:10
    3|     bar: number,
                ^^^^^^ [2]
   optional.js:13:10
   13| type T = Obj['foo']?.['bar'];
                ^^^^^^^^^^ [3]


Error ------------------------------------------------------------------------------------------------ optional.js:20:13

Cannot access string literal `b` on indexed access because property `b` is missing in null or undefined [1].
[incompatible-use]

   optional.js:20:13
   20| 1 as Y["a"]["b"]?.["c"]; // Error - access `b` on undefined
                   ^^^

References:
   optional.js:20:6
   20| 1 as Y["a"]["b"]?.["c"]; // Error - access `b` on undefined
            ^^^^^^ [1]


Error ------------------------------------------------------------------------------------------------ optional.js:21:24

Cannot access string literal `c` on optional indexed access because property `c` is missing in null or undefined [1].
[incompatible-use]

   optional.js:21:24
   21| 1 as Y["a"]?.["opt_b"]["c"]; // Error - access `c` on undefined
                              ^^^

References:
   optional.js:21:6
   21| 1 as Y["a"]?.["opt_b"]["c"]; // Error - access `c` on undefined
            ^^^^^^^^^^^^^^^^^ [1]


Error ------------------------------------------------------------------------------------------------ optional.js:22:22

Cannot access string literal `c` on optional indexed access because property `c` is missing in undefined [1].
[incompatible-use]

   optional.js:22:22
   22| 1 as (Y["a"]?.["b"])["c"]; // Error - access `c` on undefined
                            ^^^

References:
   optional.js:22:7
   22| 1 as (Y["a"]?.["b"])["c"]; // Error - access `c` on undefined
             ^^^^^^ [1]


Error ------------------------------------------------------------------------------------------------ optional.js:23:15

Cannot access string literal `xxx` on indexed access because property `xxx` is missing in object type [1].
[prop-missing]

   optional.js:23:15
   23| 1 as Y["a"]?.["xxx"]; // Error - non-existent prop
                     ^^^^^

References:
   optional.js:18:16
   18| type Y = {|a: ?{|b: Z, opt_b: ?Z|}|};
                      ^^^^^^^^^^^^^^^^^^^ [1]


Error ------------------------------------------------------------------------------------------------- optional.js:24:1

Cannot cast `true` to optional indexed access because: [incompatible-type]
 - Either boolean [1] is incompatible with number [2].
 - Or boolean [1] is incompatible with undefined [3].

   optional.js:24:1
   24| true as Z?.['c']; // Error - wrong type
       ^^^^ [1]

References:
   optional.js:17:15
   17| type Z = {|c: number|};
                     ^^^^^^ [2]
   optional.js:24:9
   24| true as Z?.['c']; // Error - wrong type
               ^ [3]


Error ------------------------------------------------------------------------------------------------- optional.js:28:1

Cannot cast `true` to indexed access because: [incompatible-type]
 - Either boolean [1] is incompatible with number [2].
 - Or boolean [1] is incompatible with undefined [3].

   optional.js:28:1
   28| true as Y["a"]?.["b"]["c"]; // Error - wrong type
       ^^^^ [1]

References:
   optional.js:17:15
   17| type Z = {|c: number|};
                     ^^^^^^ [2]
   optional.js:28:9
   28| true as Y["a"]?.["b"]["c"]; // Error - wrong type
               ^^^^^^^^^^^^^ [3]


Error ------------------------------------------------------------------------------------------------- optional.js:32:1

Cannot cast `true` to optional indexed access because: [incompatible-type]
 - Either boolean [1] is incompatible with number [2].
 - Or boolean [1] is incompatible with undefined [3].

   optional.js:32:1
   32| true as Y["a"]?.["b"]?.["c"]; // Error - wrong type
       ^^^^ [1]

References:
   optional.js:17:15
   17| type Z = {|c: number|};
                     ^^^^^^ [2]
   optional.js:32:9
   32| true as Y["a"]?.["b"]?.["c"]; // Error - wrong type
               ^^^^^^^^^^^^^ [3]


Error ------------------------------------------------------------------------------------------------- optional.js:36:1

Cannot cast `true` to optional indexed access because: [incompatible-type]
 - Either boolean [1] is incompatible with number [2].
 - Or boolean [1] is incompatible with undefined [3].

   optional.js:36:1
   36| true as Y["a"]?.["opt_b"]?.["c"]; // Error - wrong type
       ^^^^ [1]

References:
   optional.js:17:15
   17| type Z = {|c: number|};
                     ^^^^^^ [2]
   optional.js:36:9
   36| true as Y["a"]?.["opt_b"]?.["c"]; // Error - wrong type
               ^^^^^^^^^^^^^^^^^ [3]


Error ------------------------------------------------------------------------------------------------- optional.js:39:1

Cannot cast `true` to optional indexed access because: [incompatible-type]
 - Either boolean [1] is incompatible with number [2].
 - Or boolean [1] is incompatible with undefined [3].

   optional.js:39:1
   39| true as Z?.['c']; // Error - wrong type
       ^^^^ [1]

References:
   optional.js:17:15
   17| type Z = {|c: number|};
                     ^^^^^^ [2]
   optional.js:39:9
   39| true as Z?.['c']; // Error - wrong type
               ^ [3]


Error ------------------------------------------------------------------------------------------------- optional.js:46:1

Cannot cast `true` to indexed access because: [incompatible-type]
 - Either boolean [1] is incompatible with number [2].
 - Or boolean [1] is incompatible with undefined [3].

   optional.js:46:1
   46| true as U["a"]?.["b"]["c"]; // Error - wrong type
       ^^^^ [1]

References:
   optional.js:17:15
   17| type Z = {|c: number|};
                     ^^^^^^ [2]
   optional.js:46:9
   46| true as U["a"]?.["b"]["c"]; // Error - wrong type
               ^^^^^^^^^^^^^ [3]


Error ------------------------------------------------------------------------------------------------- optional.js:50:1

Cannot cast `true` to optional indexed access because: [incompatible-type]
 - Either boolean [1] is incompatible with number [2].
 - Or boolean [1] is incompatible with undefined [3].

   optional.js:50:1
   50| true as U["a"]?.["b"]?.["c"]; // Error - wrong type
       ^^^^ [1]

References:
   optional.js:17:15
   17| type Z = {|c: number|};
                     ^^^^^^ [2]
   optional.js:50:9
   50| true as U["a"]?.["b"]?.["c"]; // Error - wrong type
               ^^^^^^^^^^^^^ [3]


Error ------------------------------------------------------------------------------------------------- optional.js:54:1

Cannot cast `true` to optional indexed access because: [incompatible-type]
 - Either boolean [1] is incompatible with number [2].
 - Or boolean [1] is incompatible with undefined [3].

   optional.js:54:1
   54| true as U["a"]?.["opt_b"]?.["c"]; // Error - wrong type
       ^^^^ [1]

References:
   optional.js:17:15
   17| type Z = {|c: number|};
                     ^^^^^^ [2]
   optional.js:54:9
   54| true as U["a"]?.["opt_b"]?.["c"]; // Error - wrong type
               ^^^^^^^^^^^^^^^^^ [3]


Error ------------------------------------------------------------------------------------------------- optional.js:59:1

Cannot cast `true` to optional indexed access because: [incompatible-type]
 - Either boolean [1] is incompatible with number [2].
 - Or boolean [1] is incompatible with undefined [3].

   optional.js:59:1
   59| true as MaybeZ?.['c']; // Error - wrong type
       ^^^^ [1]

References:
   optional.js:17:15
   17| type Z = {|c: number|};
                     ^^^^^^ [2]
   optional.js:59:9
   59| true as MaybeZ?.['c']; // Error - wrong type
               ^^^^^^ [3]


Error ------------------------------------------------------------------------------------------------- optional.js:64:1

Cannot cast `true` to optional indexed access because: [incompatible-type]
 - Either boolean [1] is incompatible with number [2].
 - Or boolean [1] is incompatible with undefined [3].

   optional.js:64:1
   64| true as VoidZ?.['c']; // Error - wrong type
       ^^^^ [1]

References:
   optional.js:17:15
   17| type Z = {|c: number|};
                     ^^^^^^ [2]
   optional.js:64:9
   64| true as VoidZ?.['c']; // Error - wrong type
               ^^^^^ [3]


Error ------------------------------------------------------------------------------------------------- optional.js:68:1

Cannot cast `1` to optional indexed access because number [1] is incompatible with undefined [2]. [incompatible-type]

   optional.js:68:1
   68| 1 as void?.['c']; // Error
       ^ [1]

References:
   optional.js:68:6
   68| 1 as void?.['c']; // Error
            ^^^^ [2]


Error ------------------------------------------------------------------------------------------------- optional.js:71:1

Cannot cast `1` to optional indexed access because number [1] is incompatible with undefined [2]. [incompatible-type]

   optional.js:71:1
   71| 1 as empty?.['x']; // Error
       ^ [1]

References:
   optional.js:71:6
   71| 1 as empty?.['x']; // Error
            ^^^^^ [2]


Error ------------------------------------------------------------------------------------------------- optional.js:79:1

Cannot cast `f(...)` to boolean literal `true` because number [1] is incompatible with boolean literal `true` [2].
[incompatible-type]

   optional.js:79:1
   79| f(z, 'c') as true; // Error - wrong type
       ^^^^^^^^^

References:
   optional.js:17:15
   17| type Z = {|c: number|};
                     ^^^^^^ [1]
   optional.js:79:14
   79| f(z, 'c') as true; // Error - wrong type
                    ^^^^ [2]


Error ------------------------------------------------------------------------------------------------- optional.js:79:1

Cannot cast `f(...)` to boolean literal `true` because undefined [1] is incompatible with boolean literal `true` [2].
[incompatible-type]

   optional.js:79:1
   79| f(z, 'c') as true; // Error - wrong type
       ^^^^^^^^^

References:
   optional.js:73:71
   73| function f<K extends string, T extends ?{+[K]: unknown}>(t: T, k: K): T?.[K] {
                                                                             ^ [1]
   optional.js:79:14
   79| f(z, 'c') as true; // Error - wrong type
                    ^^^^ [2]


Error ------------------------------------------------------------------------------------------------- optional.js:80:6

Cannot call `f` because property `xxx` is missing in `Z` [1]. [prop-missing]

   optional.js:80:6
   80| f(z, 'xxx'); // Error - non-existent prop
            ^^^^^

References:
   optional.js:77:16
   77| declare var z: Z;
                      ^ [1]


Error ------------------------------------------------------------------------------------------------- optional.js:84:1

Cannot cast `f(...)` to boolean literal `true` because number [1] is incompatible with boolean literal `true` [2].
[incompatible-type]

   optional.js:84:1
   84| f(mz, 'c') as true; // Error - wrong type
       ^^^^^^^^^^

References:
   optional.js:17:15
   17| type Z = {|c: number|};
                     ^^^^^^ [1]
   optional.js:84:15
   84| f(mz, 'c') as true; // Error - wrong type
                     ^^^^ [2]


Error ------------------------------------------------------------------------------------------------- optional.js:84:1

Cannot cast `f(...)` to boolean literal `true` because undefined [1] is incompatible with boolean literal `true` [2].
[incompatible-type]

   optional.js:84:1
   84| f(mz, 'c') as true; // Error - wrong type
       ^^^^^^^^^^

References:
   optional.js:73:71
   73| function f<K extends string, T extends ?{+[K]: unknown}>(t: T, k: K): T?.[K] {
                                                                             ^ [1]
   optional.js:84:15
   84| f(mz, 'c') as true; // Error - wrong type
                     ^^^^ [2]


Error ------------------------------------------------------------------------------------------------- optional.js:85:7

Cannot call `f` because property `xxx` is missing in `Z` [1]. [prop-missing]

   optional.js:85:7
   85| f(mz, 'xxx'); // Error - non-existent prop
             ^^^^^

References:
   optional.js:82:17
   82| declare var mz: MaybeZ;
                       ^^^^^^ [1]


Error ------------------------------------------------------------------------------------------------- optional.js:88:1

Cannot cast `'s'` to `Before` because: [incompatible-type]
 - Either string [1] is incompatible with number [2].
 - Or string [1] is incompatible with undefined [3].

   optional.js:88:1
   88| 's' as Before; // Error
       ^^^ [1]

References:
   optional.js:91:19
   91| type Later = ?{a: number};
                         ^^^^^^ [2]
   optional.js:87:15
   87| type Before = Later?.['a'];
                     ^^^^^ [3]


Error ------------------------------------------------------------------------------------------------ optional.js:103:1

Cannot cast `'xx'` to optional indexed access because: [incompatible-type]
 - Either string [1] is incompatible with number [2].
 - Or string [1] is incompatible with undefined [3].

   optional.js:103:1
   103| 'xx' as O?.['bar']; // Error
        ^^^^ [1]

References:
   optional.js:96:8
    96|   bar: number;
               ^^^^^^ [2]
   optional.js:103:9
   103| 'xx' as O?.['bar']; // Error
                ^ [3]


Error ------------------------------------------------------------------------------------------------ optional.js:117:1

Cannot cast `'xx'` to optional indexed access because: [incompatible-type]
 - Either string [1] is incompatible with number [2].
 - Or string [1] is incompatible with undefined [3].

   optional.js:117:1
   117| 'xx' as C?.['bar']; // Error
        ^^^^ [1]

References:
   optional.js:109:8
   109|   bar: number;
               ^^^^^^ [2]
   optional.js:117:9
   117| 'xx' as C?.['bar']; // Error
                ^ [3]


Error ------------------------------------------------------------------------------------------------ optional.js:122:1

Cannot cast `true` to `NonMaybeNumber` because boolean [1] is incompatible with number [2]. [incompatible-type]

   optional.js:122:1
   122| true as NonMaybeNumber; // Error
        ^^^^ [1]

References:
   optional.js:122:9
   122| true as NonMaybeNumber; // Error
                ^^^^^^^^^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------ optional.js:123:1

Cannot cast `undefined` to `NonMaybeNumber` because undefined [1] is incompatible with number [2]. [incompatible-type]

   optional.js:123:1
   123| undefined as NonMaybeNumber; // Error
        ^^^^^^^^^ [1]

References:
   optional.js:123:14
   123| undefined as NonMaybeNumber; // Error
                     ^^^^^^^^^^^^^^ [2]


Error ------------------------------------------------------------------------------------------- optional_import.js:5:1

Cannot cast `true` to optional indexed access because: [incompatible-type]
 - Either boolean [1] is incompatible with number [2].
 - Or boolean [1] is incompatible with undefined [3].

   optional_import.js:5:1
    5| true as MaybeZ?.['c']; // Error - wrong type
       ^^^^ [1]

References:
   optional.js:17:15
   17| type Z = {|c: number|};
                     ^^^^^^ [2]
   optional_import.js:5:9
    5| true as MaybeZ?.['c']; // Error - wrong type
               ^^^^^^ [3]


Error ------------------------------------------------------------------------------------------------------ test.js:5:1

Cannot cast `'hello world'` to `ArrElem` because string [1] is incompatible with number [2]. [incompatible-type]

   test.js:5:1
   5| 'hello world' as ArrElem; // Error
      ^^^^^^^^^^^^^ [1]

References:
   test.js:5:18
   5| 'hello world' as ArrElem; // Error
                       ^^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:16:1

Cannot cast `'hello world'` to `DictElem` because string [1] is incompatible with number [2]. [incompatible-type]

   test.js:16:1
   16| 'hello world' as DictElem; // Error
       ^^^^^^^^^^^^^ [1]

References:
   test.js:16:18
   16| 'hello world' as DictElem; // Error
                        ^^^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:31:1

Cannot cast `1` to `ObjFoo` because number [1] is incompatible with boolean [2]. [incompatible-type]

   test.js:31:1
   31| 1 as ObjFoo; // Error
       ^ [1]

References:
   test.js:31:6
   31| 1 as ObjFoo; // Error
            ^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:34:1

Cannot cast `1` to indexed access because number [1] is incompatible with string [2]. [incompatible-type]

   test.js:34:1
   34| 1 as Obj['baz']; // Error
       ^ [1]

References:
   test.js:25:8
   25|   baz: string,
              ^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:42:1

Cannot cast `f(...)` to string because boolean [1] is incompatible with string [2]. [incompatible-type]

   test.js:42:1
   42| f(o) as string; // Error
       ^^^^

References:
   test.js:24:8
   24|   foo: boolean,
              ^^^^^^^ [1]
   test.js:42:9
   42| f(o) as string; // Error
               ^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------------- test.js:44:25

Cannot access string literal `bork` on `Obj` because property `bork` is missing in `Obj` [1]. [prop-missing]

   test.js:44:25
   44| type Nonexistant1 = Obj['bork']; // Error
                               ^^^^^^

References:
   test.js:44:21
   44| type Nonexistant1 = Obj['bork']; // Error
                           ^^^ [1]


Error ---------------------------------------------------------------------------------------------------- test.js:47:25

Cannot access `Obj` [1] with computed property using string [2]. [invalid-computed-prop]

   test.js:47:25
   47| type Nonexistant2 = Obj[string]; // Error
                               ^^^^^^ [2]

References:
   test.js:47:21
   47| type Nonexistant2 = Obj[string]; // Error
                           ^^^ [1]


Error ---------------------------------------------------------------------------------------------------- test.js:50:27

Cannot access boolean on `Arr` because boolean [1] is not an array index. [incompatible-use]

   50| type ArrNonexistant = Arr[boolean]; // Error
                                 ^^^^^^^ [1]


Error ---------------------------------------------------------------------------------------------------- test.js:53:11

Cannot access string literal `x` on undefined because property `x` is missing in undefined [1]. [incompatible-use]

   test.js:53:11
   53| 1 as void['x']; // Error
                 ^^^

References:
   test.js:53:6
   53| 1 as void['x']; // Error
            ^^^^ [1]


Error ---------------------------------------------------------------------------------------------------- test.js:54:11

Cannot access string literal `x` on null because property `x` is missing in null [1]. [incompatible-use]

   test.js:54:11
   54| 1 as null['x']; // Error
                 ^^^

References:
   test.js:54:6
   54| 1 as null['x']; // Error
            ^^^^ [1]


Error ----------------------------------------------------------------------------------------------------- test.js:65:1

Cannot cast `'xx'` to indexed access because string [1] is incompatible with number [2]. [incompatible-type]

   test.js:65:1
   65| 'xx' as O['bar']; // Error
       ^^^^ [1]

References:
   test.js:60:8
   60|   bar: number;
              ^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:74:1

Cannot cast `'xx'` to indexed access because string [1] is incompatible with number [2]. [incompatible-type]

   test.js:74:1
   74| 'xx' as C['bar']; // Error
       ^^^^ [1]

References:
   test.js:69:8
   69|   bar: number;
              ^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:83:1

Cannot cast `'xx'` to indexed access because string [1] is incompatible with number [2]. [incompatible-type]

   test.js:83:1
   83| 'xx' as I['bar']; // ERROR
       ^^^^ [1]

References:
   test.js:78:8
   78|   bar: number;
              ^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:89:8

Cannot cast function to indexed access because in the return value: boolean [1] is incompatible with number [2].
[incompatible-type]

   test.js:89:8
   89| (() => true) as M['method']; // ERROR
              ^^^^ [1]

References:
   test.js:86:13
   86|   method(): number;
                   ^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:94:5

Cannot cast `f()` to empty because number [1] is incompatible with empty [2]. [incompatible-type]

   test.js:94:5
   94|     f() as empty; // ERROR
           ^^^

References:
   test.js:86:13
   86|   method(): number;
                   ^^^^^^ [1]
   test.js:94:12
   94|     f() as empty; // ERROR
                  ^^^^^ [2]


Error ---------------------------------------------------------------------------------------------------- unions.js:7:1

Cannot cast `v` to string because number [1] is incompatible with string [2]. [incompatible-type]

   unions.js:7:1
   7| v as string; // error
      ^

References:
   unions.js:2:6
   2|   a: number,
           ^^^^^^ [1]
   unions.js:7:6
   7| v as string; // error
           ^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------------- unions.js:8:1

Cannot cast `v` to number because string [1] is incompatible with number [2]. [incompatible-type]

   unions.js:8:1
   8| v as number; // error
      ^

References:
   unions.js:3:6
   3|   b: string,
           ^^^^^^ [1]
   unions.js:8:6
   8| v as number; // error
           ^^^^^^ [2]


Error --------------------------------------------------------------------------------------------------- unions.js:13:5

Cannot assign `true` to `v` because: [incompatible-type]
 - Either boolean [1] is incompatible with number [2].
 - Or boolean [1] is incompatible with string [3].

   unions.js:13:5
   13| v = true; // error
           ^^^^ [1]

References:
   unions.js:2:6
    2|   a: number,
            ^^^^^^ [2]
   unions.js:3:6
    3|   b: string,
            ^^^^^^ [3]


Error --------------------------------------------------------------------------------------------------- unions.js:21:1

Cannot cast `w` to indexed access because string [1] is incompatible with number [2]. [incompatible-type]

   unions.js:21:1
   21| w as M['a']; // error
       ^

References:
   unions.js:19:16
   19| declare var w: W;
                      ^ [1]
   unions.js:2:6
    2|   a: number,
            ^^^^^^ [2]



Found 54 errors

Only showing the most relevant union/intersection branches.
To see all branches, re-run Flow with --show-all-branches
